# gsl--private

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  Makefile  README.md  base.cmake
lib/: CMakeLists.txt
lib/constant/: CMakeLists.txt  ChangeLog
lib/constant/includes/gsl/constant/: cgs.h  cgsm.h  machine.h  math.h  mks.h  mksa.h  num.h
lib/constant/test/: CMakeLists.txt  test.cpp
lib/math/: CMakeLists.txt  test.cpp
lib/math/includes/gsl/math/: complex.h  complex_math.h
lib/math/src/: complex.cpp  m.cpp  math.cpp
lib/math/test/: CMakeLists.txt  complex-math-test.cpp  test.cpp
lib/math/test/complex-data/: base.h  results.h  results1.h
lib/type/: CMakeLists.txt
lib/type/includes/gsl/type/: complex.h  type_info.h
lib/type/test/: CMakeLists.txt  complex-test.cpp
